[tool.poetry]
name = "alfa-orders"
version = "0.1.0"
description = "Alfa Bank orders receiving"
authors = ["potykion <potykion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
typing_extensions = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
