[tool.poetry]
name = "alfa-orders"
version = "0.1.1"
description = "Lib for loading AlfaBank orders"
authors = ["potykion <potykion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
typing_extensions = "^3.7"
more-itertools = "^7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
